...
        let nib = UINib(nibName: "EventCell", bundle: nil)
        mainView.eventTableView.register(nib, forCellReuseIdentifier: "eventCell")
        
        mainView.eventTableView.delegate = self
        mainView.eventTableView.dataSource = self
        
        self.navigationItem.backBarButtonItem = UIBarButtonItem(title: "Back", style: .plain, target: nil, action: nil)

        eventPresenter.getEvents(view: self, service: EventService(), url: LAST_EVENT_URL)
    }
    
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(true)
...
